--- a/tsa/templates/nav.html
+++ b/tsa/templates/nav.html
@@ -12,7 +12,7 @@
     </button>
     <a class="navbar-brand" href="{{ url_for('public.home') }}">
 
-      Crawlcheck.io
+      Time series analyser
 
     </a>
   </div>
